# seckill-system

./: .gitignore  CMakeLists.txt  README.md  config.yaml  test_connection.cc
.github/workflows/: build-windows.yml
client/: ActivityDetailWindow.cc  ActivityDetailWindow.h  CMakeLists.txt  LoginWindow.cc  LoginWindow.h  MainWindow.cc  MainWindow.h  NetworkManager.cc  NetworkManager.h  README.md  main.cc  seckill_client.pro
include/: http_server.h
include/common/: Config.h  ErrorCode.h  MysqlPool.h  RedisKeys.h  RedisPool.h  Result.h
include/controller/: ActivityController.h  OrderController.h  SeckillController.h
include/model/: Activity.h  Order.h  User.h
include/repository/: ActivityRepository.h  OrderRepository.h  StockRepository.h  UserRepository.h
include/service/: ActivityService.h  OrderService.h  OrderWorker.h  SeckillService.h  StockService.h  UserService.h
scripts/: init_db.sql
src/: http_server.cc  main.cc
src/common/: ErrorCode.cc  MysqlPool.cc  RedisKeys.cc  RedisPool.cc
src/controller/: ActivityController.cc  OrderController.cc  SeckillController.cc
src/repository/: ActivityRepository.cc  OrderRepository.cc  StockRepository.cc  UserRepository.cc
src/service/: ActivityService.cc  OrderService.cc  OrderWorker.cc  SeckillService.cc  StockService.cc  UserService.cc
wrk/: seckill_post.lua
